fixed overlap between header / contact

--- a/style.css
+++ b/style.css
@@ -497,8 +497,8 @@ nav :focus {
 
 .contactUs {
   width: 100%;
-  height: 60vh;
-
+  min-height: 60vh;
+  /* margin-bottom:20rem; */
 
  
 
@@ -543,6 +543,7 @@ footer {
   background: black;
   color: white;
   /* margin-top: 2em; */
+  position: static;
 }
 
 .footercol {
